@@ -161,7 +161,7 @@
       versions of third-party software in use in this session.
       Currently reports versions of \code{zlib}, \code{bzlib}, the
       \code{liblzma} from \code{xz}, PCRE, ICU, TRE and the \code{iconv}
-      library.
+      implementation.
 
       A similar function \code{grSoftVersion()} in package \pkg{grDevices}
       reports on third-party graphics software.
@@ -175,7 +175,7 @@
       for large \code{length(FUN.VALUE)}; as extension of \PR{16061}.
 
       \item \code{as.table()} now allows tables with one or more
-      dimensions of length 0 (as with \code{as.table(integer())}).
+      dimensions of length 0 (such as \code{as.table(integer())}).
 
       \item \code{names(x) <- NULL} now clears the names of call
       and \code{\dots} objects.
@@ -240,6 +240,9 @@
       \item \command{R CMD check} will now by default continue with
       testing after many types of errors, and will output a summary
       count of errors at the end if any have occurred.      
+      
+      \item \command{R CMD check --as-cran} checks a \file{README.md}
+      file can be processed: this needs \command{pandoc} installed.
     }
   }
 
